feat-init: [stabled] [work] [no-tested] Cucumber: Start development for cucumber implementation in help4devs